chore(package.json): @tencent

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vue-server-renderer-for-tsw",
-  "version": "1.0.0",
+  "name": "@tencent/vue-server-renderer-for-tsw",
+  "version": "0.1.0",
   "description": "vue-server-renderer wrapper for TSW(Tencent Server Web)",
   "main": "index.js",
   "scripts": {
